--- a/diapos/GeometriaSolar.tex
+++ b/diapos/GeometriaSolar.tex
@@ -1,21 +1,19 @@
-% Created 2015-01-18 dom 09:28
+% Created 2017-01-11 mié 13:31
+% Intended LaTeX compiler: pdflatex
 \documentclass[xcolor={usenames,svgnames,dvipsnames}]{beamer}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
-\usepackage{fixltx2e}
 \usepackage{graphicx}
+\usepackage{grffile}
 \usepackage{longtable}
-\usepackage{float}
 \usepackage{wrapfig}
 \usepackage{rotating}
 \usepackage[normalem]{ulem}
 \usepackage{amsmath}
 \usepackage{textcomp}
-\usepackage{marvosym}
-\usepackage{wasysym}
 \usepackage{amssymb}
+\usepackage{capt-of}
 \usepackage{hyperref}
-\tolerance=1000
 \usepackage{color}
 \usepackage{listings}
 \usepackage{mathpazo}
@@ -25,60 +23,71 @@
 \AtBeginSubsection[]{\begin{frame}[plain]\tableofcontents[currentsubsection,sectionstyle=show/shaded,subsectionstyle=show/shaded/hide]\end{frame}}
 \AtBeginSection[]{\begin{frame}[plain]\tableofcontents[currentsection,hideallsubsections]\end{frame}}
 \usepackage[emulate=units]{siunitx}
-\sisetup{per=fraction, fraction=nice, decimalsymbol=comma}
+\sisetup{fraction=nice, decimalsymbol=comma, retain-unity-mantissa = false}
 \newunit{\wattpeak}{Wp}
 \newunit{\watthour}{Wh}
 \newunit{\amperehour}{Ah}
 \hypersetup{colorlinks=true, linkcolor=Blue, urlcolor=Blue}
-\setbeamercolor{alerted text}{fg=red!50!black} \setbeamerfont{alerted text}{series=\bfseries}
+\renewcommand{\thefootnote}{\fnsymbol{footnote}}
+\setbeamercolor{alerted text}{fg=blue!50!black} \setbeamerfont{alerted text}{series=\bfseries}
 \usetheme[hideothersubsections]{Goettingen}
 \usecolortheme{rose}
 \usefonttheme{serif}
 \author{Oscar Perpiñán Lamigueiro \\ \url{http://oscarperpinan.github.io}}
 \date{}
-\title{Energía Solar Fotovoltaica:\\Geometría Solar}
+\title{Geometría Solar}
+\subtitle{Energía Solar Fotovoltaica}
 \hypersetup{
-  pdfkeywords={},
-  pdfsubject={},
-  pdfcreator={Emacs 24.4.1 (Org mode 8.2.7c)}}
+ pdfauthor={Oscar Perpiñán Lamigueiro \\ \url{http://oscarperpinan.github.io}},
+ pdftitle={Geometría Solar},
+ pdfkeywords={},
+ pdfsubject={},
+ pdfcreator={Emacs 24.5.1 (Org mode 9.0)}, 
+ pdflang={Spanish}}
 \begin{document}
 
 \maketitle
 
 \section{Geometría Sol y Tierra}
-\label{sec-1}
+\label{sec:org570cee7}
 \subsection{Movimiento Sol-Tierra}
-\label{sec-1-1}
+\label{sec:orgfb4c5bf}
 
-\begin{frame}[label=sec-1-1-1]{Introducción}
-\begin{itemize}
-\item La Tierra se mueve alrededor del Sol siguiendo una elipse de baja
+\begin{frame}[label={sec:orgab925d0}]{Movimiento terrestre}
+\begin{center}
+\includegraphics[width=.9\linewidth]{../figs/PlanoEcliptica.pdf}
+\end{center}
+
+\begin{itemize}[<+->]
+\item La Tierra \alert{gira sobre si misma} alrededor de su eje polar.
+\begin{itemize}[<.->]
+\item Periodo aproximado: 24 horas.
+\end{itemize}
+
+\item La Tierra se mueve \alert{alrededor del Sol} siguiendo una elipse de baja
 excentricidad.
-
-\begin{itemize}
+\begin{itemize}[<.->]
 \item Periodo aproximado: 1 año.
 
 \item Este movimiento está contenido en el llamado \emph{plano de la
 eclíptica}
 \end{itemize}
+\end{itemize}
+\end{frame}
 
-\item La Tierra gira sobre si misma alrededor de su eje polar.
+\begin{frame}[label={sec:org5823035}]{Movimiento terrestre}
+\begin{center}
+\includegraphics[width=.9\linewidth]{../figs/PlanoEcliptica.pdf}
+\end{center}
 
 \begin{itemize}
-\item Entre el eje polar y el plano de la eclíptica hay un ángulo
-constante de $23,45\degree$.
+\item Entre el eje polar y el plano de la eclíptica hay un ángulo constante de \(23,45\degree\).
 
-\item Entre el plano ecuatorial y la linea que une Tierra-Sol hay un
-ángulo variable: \emph{declinación.}
-\end{itemize}
+\item Entre el plano ecuatorial y la linea que une la Tierra y el Sol hay un ángulo variable: \emph{declinación.}
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label=sec-1-1-2]{Movimiento Sol-Tierra}
-\includegraphics[width=.9\linewidth]{../figs/PlanoEcliptica.pdf}
-\end{frame}
-
-\begin{frame}[label=sec-1-1-3]{Distancia Sol-Tierra}
+\begin{frame}[label={sec:org7f33db0}]{Distancia Sol-Tierra}
 \begin{itemize}
 \item Distancia Sol-Tierra
 \end{itemize}
@@ -100,86 +109,33 @@ constante de $23,45\degree$.
 \end{frame}
 
 
-
-\begin{frame}[label=sec-1-1-4]{Declinación}
-\[\delta=23,45\degree\cdot\sin\left(\frac{2\pi\cdot\left(d_{n}+284\right)}{365}\right)\]
-
-\includegraphics[width=.9\linewidth]{../figs/Declinacion.pdf}
-\end{frame}
-
-\begin{frame}[label=sec-1-1-5]{Otras ecuaciones}
-\begin{align*}
-  X &= 2 \pi \cdot (d_n-1)/365\\
-  \delta &= 0.006918 - 0.399912 \cdot \cos(X) + 0.070257 \cdot \sin(X)\\
-    &-  0.006758 \cdot \cos(2 X) + 0.000907 \cdot \sin(2 X)\\
-    &- 0.002697 \cdot \cos(3 X) + 0.001480 \cdot \sin(3 X)\\
-  \epsilon_{0} &= 1.000110 + 0.034221 \cdot \cos(X) + 0.001280 \cdot \sin(X)\\
-    &+ 0.000719 \cdot \cos(2 X) + 0.000077 \cdot \sin(2 X)
-\end{align*}
-\end{frame}
-
-\begin{frame}[label=sec-1-1-6]{Otras ecuaciones}
-\includegraphics[width=.9\linewidth]{../figs/DeclinacionDiferencias.pdf}
-\end{frame}
-
-\begin{frame}[label=sec-1-1-7]{Declinación}
-\begin{itemize}
-\item \alert{Equinoccio de primavera}:
-
-\begin{itemize}
-\item 21-22 Marzo (Dia del Año 80-81)
-\end{itemize}
-
-\item \alert{Equinoccio de otoño:}
-
-\begin{itemize}
-\item 22-23 Septiembre (Dia del Año 265-266)
-\end{itemize}
-
-\item \alert{Solsticio de Verano}:
-
-\begin{itemize}
-\item 21-22 Junio (Dia del Año 172-173)
-\end{itemize}
-
-\item \alert{Solsticio de Invierno:}
-
-\begin{itemize}
-\item 21-22 Diciembre (Dia del Año 355-356)
-\end{itemize}
-\end{itemize}
-\end{frame}
-
-\begin{frame}[label=sec-1-1-8]{Declinación}
-\begin{itemize}
-\item Las estaciones se deben al ángulo entre plano ecuatorial y plano de
+\begin{frame}[label={sec:org74e92b3}]{Estaciones}
+\begin{itemize}[<+->]
+\item Las estaciones se deben al ángulo entre el plano ecuatorial y el plano de
 la eclíptica
 
-\item \alert{Solsticio de verano}
-
-\begin{itemize}
+\item \alert{Solsticio de junio}
+\begin{itemize}[<.->]
 \item Declinación máxima.
 
-\item Días más largos en hemisferio Norte.
+\item Días más largos en hemisferio Norte (verano)
 
 \item El Sol amanece por el Noreste y anochece por el Noroeste en el
 hemisferio Norte.
 \end{itemize}
 
-\item \alert{Solsticio de invierno}
-
-\begin{itemize}
+\item \alert{Solsticio de diciembre}
+\begin{itemize}[<.->]
 \item Declinación mínima.
 
-\item Días más cortos en hemisferio Norte.
+\item Días más cortos en hemisferio Norte (invierno)
 
 \item El Sol amanece por el Sureste y anochece por el Suroeste en el
 hemisferio Norte.
 \end{itemize}
 
 \item \alert{Equinoccios}
-
-\begin{itemize}
+\begin{itemize}[<.->]
 \item Declinación nula
 
 \item La duración de noche y día coincide.
@@ -189,86 +145,143 @@ hemisferio Norte.
 \end{itemize}
 \end{frame}
 
+\begin{frame}[label={sec:org32a5bbf}]{Solsticios y equinoccios}
+\begin{itemize}
+\item \alert{Equinoccio de marzo}:
+
+\begin{itemize}
+\item 21-22 Marzo (Dia del Año 80-81)
+\end{itemize}
+
+\item \alert{Equinoccio de septiembre:}
+
+\begin{itemize}
+\item 22-23 Septiembre (Dia del Año 265-266)
+\end{itemize}
+
+\item \alert{Solsticio de junio}:
+
+\begin{itemize}
+\item 21-22 Junio (Dia del Año 172-173)
+\end{itemize}
+
+\item \alert{Solsticio de diciembre}
+
+\begin{itemize}
+\item 21-22 Diciembre (Dia del Año 355-356)
+\end{itemize}
+\end{itemize}
+\end{frame}
+
+
+\begin{frame}[label={sec:org060f27c}]{Declinación}
+\[\delta=23,45\degree\cdot\sin\left(\frac{2\pi\cdot\left(d_{n}+284\right)}{365}\right)\]
+
+\begin{center}
+\includegraphics[width=.9\linewidth]{../figs/Declinacion.pdf}
+\end{center}
+\end{frame}
+
+\begin{frame}[label={sec:orgbbf061e}]{Otras ecuaciones}
+\begin{center}
+\includegraphics[width=.9\linewidth]{../figs/DeclinacionDiferencias.pdf}
+\end{center}
+\end{frame}
+
 \subsection{Sistemas de coordenadas}
-\label{sec-1-2}
+\label{sec:org3ec6f39}
 
-\begin{frame}[label=sec-1-2-1]{Ejes terrestres}
+\begin{frame}[label={sec:orga4d1574}]{Ejes terrestres}
+\begin{center}
 \includegraphics[width=.9\linewidth]{../figs/SoldesdeTierra.pdf}
+\end{center}
 
 \[\vec{\mu}_{s}=\left[\cos\left(\delta\right)\cos\left(\omega\right)\right]\cdot\vec{\mu}_{ec}+\left[\cos\left(\delta\right)\sin\left(\omega\right)\right]\cdot\vec{\mu}_{\bot}+\sin\left(\delta\right)\cdot\vec{\mu}_{p}\]
 \end{frame}
 
 
 
-\begin{frame}[label=sec-1-2-2]{Ejes terrestres}
+\begin{frame}[label={sec:org9d77d56}]{Ejes terrestres}
+\begin{center}
 \includegraphics[height=0.7\textheight]{../figs/SistemaCoordenadasTerrestre.pdf}
+\end{center}
 
 
 \[\vec{\mu}_{s}=\left[\cos\left(\delta\right)\cos\left(\omega\right)\right]\cdot\vec{\mu}_{ec}+\left[\cos\left(\delta\right)\sin\left(\omega\right)\right]\cdot\vec{\mu}_{\bot}+\sin\left(\delta\right)\cdot\vec{\mu}_{p}\]
 \end{frame}
 
 
-\begin{frame}[label=sec-1-2-3]{Ejes locales}
+\begin{frame}[label={sec:org30ebd72}]{Ejes locales}
+\begin{center}
 \includegraphics[width=.9\linewidth]{../figs/SoldesdeTierra2.pdf}
+\end{center}
 
 \[\vec{\mu}_{s}=\left[\cos\left(\psi_{s}\right)\sin\left(\theta_{z}\right)\right]\cdot\vec{\mu}_{h}+\left[\sin\left(\psi_{s}\right)\sin\left(\theta_{z}\right)\right]\cdot\vec{\mu}_{\bot}+\cos\left(\theta_{z}\right)\cdot\vec{\mu}_{c}\]
 \end{frame}
 
 
 
-\begin{frame}[label=sec-1-2-4]{Ejes locales}
+\begin{frame}[label={sec:org1a71f62}]{Ejes locales}
+\begin{center}
 \includegraphics[width=.9\linewidth]{../figs/SistemaCoordenadasLocal.pdf}
+\end{center}
 
 \[\vec{\mu}_{s}=\left[\cos\left(\psi_{s}\right)\sin\left(\theta_{z}\right)\right]\cdot\vec{\mu}_{h}+\left[\sin\left(\psi_{s}\right)\sin\left(\theta_{z}\right)\right]\cdot\vec{\mu}_{\bot}+\cos\left(\theta_{z}\right)\cdot\vec{\mu}_{c}\]
 \end{frame}
 
-\begin{frame}[label=sec-1-2-5]{Relación entre sistemas de coordenadas}
+\begin{frame}[label={sec:org0b23c0a}]{Relación entre sistemas de coordenadas}
+\begin{center}
 \includegraphics[width=.9\linewidth]{../figs/RelacionSistemasCoordenadas.pdf}
+\end{center}
 \end{frame}
 
-\begin{frame}[label=sec-1-2-6]{Ejes locales y terrestres}
+\begin{frame}[label={sec:org3cd0b38}]{Ejes locales y terrestres}
 \begin{align*}
   \vec{\mu}_{s} &= \mathrm{signo}(\phi)\cdot\left[\cos\left(\delta\right)\cos\left(\omega\right)\sin\left(\phi\right)-\cos\left(\phi\right)\sin\left(\delta\right)\right]\cdot\vec{\mu}_{h}-\\
   &- \left[\cos\left(\delta\right)\sin\left(\omega\right)\right]\cdot\vec{\mu}_{\bot}+\\
   &+ \left[\cos\left(\delta\right)\cos\left(\omega\right)\cos\left(\phi\right)+\sin\left(\delta\right)\sin\left(\phi\right)\right]\cdot\vec{\mu}_{c} 
 \end{align*}
 
-\alert{Latitud ($\phi$) con signo}: Positivo para Hemisferio Norte, Negativo para Hemisferio Sur.
+
+\alert{Latitud (\(\phi\)) con signo}: Positivo para Hemisferio Norte, Negativo para Hemisferio Sur.
 \end{frame}
 
 \subsection{Ángulos Solares}
-\label{sec-1-3}
+\label{sec:orge25edea}
 
-\begin{frame}[label=sec-1-3-1]{Ecuaciones}
-\begin{itemize}
-\item Cenit solar
-\end{itemize}
+\begin{frame}[label={sec:org5301857}]{Ecuaciones}
+\begin{block}{Cenit solar}
 \[\cos\left(\theta_{z}\right)=\vec{\mu}_{c}\cdot\vec{\mu}_{s}=\cos\left(\delta\right)\cos\left(\omega\right)\cos\left(\phi\right)+\sin\left(\delta\right)\sin\left(\phi\right)\]
+\end{block}
 
-\begin{itemize}
-\item Azimut solar
-\end{itemize}
+\begin{block}{Azimut solar}
 \begin{align*}
   \vec{\mu_{s}}\cdot\vec{\mu}_{\bot} &=-\sin\left(\psi_{s}\right)\sin\left(\theta_{zs}\right)\\
   \vec{\mu_{s}}\cdot\vec{\mu}_{h} &=\mathrm{signo}(\phi)\cdot\cos\left(\psi_{s}\right)\sin\left(\theta_{zs}\right)\\
   \cos\left(\psi_{s}\right) &= \mathrm{signo}(\phi)\cdot\frac{\cos\left(\delta\right)\cos\left(\omega\right)\sin\left(\phi\right)-\cos\left(\phi\right)\sin\left(\delta\right)}{\sin\left(\theta_{zs}\right)}\\
   \sin(\psi_{s}) &=\frac{\cos(\delta)\sin(\omega)}{\sin(\theta_{zs})}=\frac{\cos(\delta)\sin(\omega)}{\cos(\gamma_{s})}
 \end{align*}
+\end{block}
 \end{frame}
 
 
-\begin{frame}[label=sec-1-3-2]{Trayectoria Solar ($60\degree N$)}
+
+\begin{frame}[label={sec:org4f88343}]{Trayectoria Solar (\(60\degree N\))}
+\begin{center}
 \includegraphics[width=.9\linewidth]{../figs/TrayectoriaSolar60N.pdf}
+\end{center}
 \end{frame}
 
 
 
-\begin{frame}[label=sec-1-3-3]{Trayectoria Solar ($40\degree S$)}
+\begin{frame}[label={sec:orga6ad127}]{Trayectoria Solar (\(40\degree S\))}
+\begin{center}
 \includegraphics[width=.9\linewidth]{../figs/TrayectoriaSolar40S.pdf}
+\end{center}
 \end{frame}
 
 
-\begin{frame}[label=sec-1-3-4]{Mediodía, amanecer y anocher}
+\begin{frame}[label={sec:org3dd4837}]{Mediodía, amanecer y anocher}
 \begin{itemize}
 \item Mediodía: \[\psi_{s}=0\Rightarrow\sin(\psi_{s})\Rightarrow\omega=0\]
 
@@ -278,11 +291,13 @@ hemisferio Norte.
 \[\cos(\omega_{s})=-\tan(\delta)\tan(\phi)\]
 \end{frame}
 
-\begin{frame}[label=sec-1-3-5]{Duración del día}
+\begin{frame}[label={sec:orgeff2294}]{Duración del día}
+\begin{center}
 \includegraphics[width=.9\linewidth]{../figs/DuracionDia.pdf}
+\end{center}
 \end{frame}
 
-\begin{frame}[label=sec-1-3-6]{Cálculo Ángulos Solares}
+\begin{frame}[label={sec:orgf7b3257}]{Cálculo Ángulos Solares}
 \begin{itemize}
 \item Azimut, Ángulo Cenital y Altura Solar, Duración del Dia para el:
 
@@ -301,33 +316,45 @@ hemisferio Norte.
 \end{frame}
 
 \subsection{Hora solar y oficial}
-\label{sec-1-4}
-\begin{frame}[label=sec-1-4-1]{Hora oficial}
-\begin{itemize}
-\item \alert{La hora oficial} es una medida del tiempo \alert{ligada a un meridiano}
-   que sirve de referencia para una zona determinada.
+\label{sec:org9e1efdc}
+\begin{frame}[label={sec:org646e64b}]{Hora solar}
+\[\omega=15\cdot(\mathrm{TO}-\mathrm{AO}-12)+\Delta\lambda+\frac{\mathrm{EoT}}{4}\]
 
-\item La hora oficial de la España peninsular se rija por el huso horario
-de Centroeuropa. Este huso horario está situado en
-$15\degree\mathrm{E}$.
+\begin{itemize}
+\item \(\omega\): hora solar real o aparente[º]
+\item \(TO\): hora oficial [h]
+\item \(AO\): adelanto oficial por horario de verano [h]
+\item \(\Delta\lambda\) corrección por huso horario [º]
+\item \(EoT\): Ecuación del tiempo (dia solar real y dia solar medio) [min]
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label=sec-1-4-2]{Hora oficial}
+\begin{frame}[label={sec:org12c8167}]{Hora oficial}
 \begin{itemize}
-\item \alert{Corrección}: $\Delta\lambda=\lambda_{L}-\lambda_{H}$, con
-$\lambda_{L}$ la longitud local y $\lambda_{H}$ la longitud del huso
+\item \alert{La hora oficial} es una medida del tiempo \alert{ligada a un meridiano}
+que sirve de referencia para una zona determinada.
+
+\item La hora oficial de la España peninsular se rija por el huso horario
+de Centroeuropa. Este huso horario está situado en
+\(15\degree\mathrm{E}\).
+\end{itemize}
+\end{frame}
+
+\begin{frame}[label={sec:org14f8f8a}]{Hora oficial}
+\begin{itemize}
+\item \alert{Corrección}: \(\Delta\lambda=\lambda_{L}-\lambda_{H}\), con
+\(\lambda_{L}\) la longitud local y \(\lambda_{H}\) la longitud del huso
 horario.
 
 \item Longitudes \emph{positivas} al \emph{este} del meridiano de Greenwich.
-$\Delta\lambda$ es positiva cuando la localidad está situada al este
+\(\Delta\lambda\) es positiva cuando la localidad está situada al este
 de su huso horario.
 
 \item Diferencia adicional: \emph{horario de verano}.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label=sec-1-4-3]{Tiempo solar medio}
+\begin{frame}[label={sec:orgab60ae7}]{Tiempo solar medio}
 \begin{itemize}
 \item \alert{La duración del día solar real}, definido como el tiempo que
 transcurre entre dos pasos consecutivos del Sol por el meridiano
@@ -339,64 +366,61 @@ duración del día solar real.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label=sec-1-4-4]{Ecuación del Tiempo}
-$\mathrm{EoT}=229.18\cdot\left(-0.0334\cdot\sin(M)+0.04184\cdot\sin\left(2\cdot
-      M+3.5884\right)\right)$
+\begin{frame}[label={sec:org4a30c84}]{Ecuación del Tiempo}
+\(\mathrm{EoT}=229.18\cdot\left(-0.0334\cdot\sin(M)+0.04184\cdot\sin\left(2\cdot
+      M+3.5884\right)\right)\)
 
+\begin{center}
 \includegraphics[width=.9\linewidth]{../figs/EoT.pdf}
+\end{center}
 \end{frame}
 
-\begin{frame}[label=sec-1-4-5]{Ejemplo de cálculo}
+\begin{frame}[label={sec:org376440d}]{Ejemplo de cálculo}
 \[\omega=15\cdot(\mathrm{TO}-\mathrm{AO}-12)+\Delta\lambda+\frac{\mathrm{EoT}}{4}\]
 
-\begin{itemize}
-\item Calculemos la hora solar real correspondiente al día 23 de Abril
-de 2010 a las 12 de la mañana, hora oficial de la ciudad de A Coruña,
-Galicia.
-\end{itemize}
-\pause
-\begin{itemize}
-\item Esta localidad está contenida en el meridiano de longitud
-$8.38\degree\mathrm{W}$ y su hora oficial está regida por el huso
-horario GMT+1.
-\end{itemize}
-\pause
-\begin{itemize}
-\item Por tanto $\lambda_{L}=-8.38\degree$, $\lambda_{H}=15\degree$ y
-$\Delta\lambda=-23.38\degree$.
-\end{itemize}
-\pause
-\begin{itemize}
+\begin{block}{}
+Calcule la hora solar real correspondiente al día 23 de Abril de 2010
+  (\(\mathrm{EoT=\SI{1.78}{\minute}}\)) a las 12 de la mañana, hora
+  oficial de la ciudad de A Coruña, Galicia. Esta localidad está
+  contenida en el meridiano de longitud \(8.38\degree\mathrm{W}\) y su
+  hora oficial está regida por el huso horario GMT+1.
+\end{block}
+\end{frame}
+
+\begin{frame}[label={sec:orgeffc994}]{Solución}
+\[\omega=15\cdot(\mathrm{TO}-\mathrm{AO}-12)+\Delta\lambda+\frac{\mathrm{EoT}}{4}\]
+
+\begin{itemize}[<+->]
+\item \(\lambda_{L}=-8.38\degree\), \(\lambda_{H}=15\degree\) y
+\(\Delta\lambda=-23.38\degree\).
+
 \item En España se aplica el horario de verano y este día está incluido
-en el período afectado, $\mathrm{AO}=1$.
-\end{itemize}
-\pause
-\begin{itemize}
-\item Por último, para este día $\mathrm{EoT=\SI{1.78}{\minute}}$.
-\end{itemize}
-\pause
-\begin{itemize}
-\item Así $\omega=-37.94\degree$ (aproximadamente las 9 y media de la
-mañana). El Sol culminará ($\omega=0$) cuando sean las 14:31, hora
+en el período afectado, \(\mathrm{AO}=1\).
+
+\item Por último, para este día \(\mathrm{EoT=\SI{1.78}{\minute}}\).
+
+\item Así \(\omega=-37.94\degree\) (aproximadamente las 9 y media de la
+mañana). El Sol culminará (\(\omega=0\)) cuando sean las 14:31, hora
 oficial.
 \end{itemize}
 \end{frame}
 
 
 \section{Geometría de los sistemas fotovoltaicos}
-\label{sec-2}
+\label{sec:org9ea76b6}
 
 \subsection{Sistemas Estáticos y de Seguimiento}
-\label{sec-2-1}
-\begin{frame}[label=sec-2-1-1]{Sistemas estáticos}
+\label{sec:org801acbd}
+\begin{frame}[label={sec:org5c5da44}]{Sistemas estáticos}
+\begin{center}
 \includegraphics[width=.9\linewidth]{../figs/EstructuraEstaticaSuelo.jpg}
+\end{center}
 \end{frame}
 
-\begin{frame}[label=sec-2-1-2]{Sistemas con seguimiento}
-\begin{itemize}
+\begin{frame}[label={sec:org766d551}]{Sistemas con seguimiento}
+\begin{itemize}[<+->]
 \item \alert{Fundamento:}
-
-\begin{itemize}
+\begin{itemize}[<.->]
 \item Radiación incidente aumenta al seguir al sol
 
 \item Pérdidas por reflexión disminuyen si el apuntamiento al sol mejora
@@ -408,26 +432,23 @@ mejores aprovechamientos del terreno.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label=sec-2-1-3]{Algunos tipos de seguimiento solar}
-\begin{itemize}
+\begin{frame}[label={sec:org8675233}]{Algunos tipos de seguimiento solar}
+\begin{itemize}[<+->]
 \item \alert{Doble eje}
-
-\begin{itemize}
+\begin{itemize}[<.->]
 \item Apuntamiento \guillemotleft{}perfecto\guillemotright{}
 
 \item Mejor productividad, peor ocupación de terreno.
 \end{itemize}
 
 \item \alert{Seguimento acimutal}
-
-\begin{itemize}
+\begin{itemize}[<.->]
 \item Sacrifica un movimiento (inclinación del generador) para conseguir
 sistemas más económicos.
 \end{itemize}
 
 \item \alert{Seguimiento horizontal con eje Norte-Sur}
-
-\begin{itemize}
+\begin{itemize}[<.->]
 \item Sencillez y estabilidad estructural (el eje es horizontal y
 paralelo al terreno, con tantos puntos de apoyo como se consideren
 necesarios),
@@ -440,32 +461,39 @@ necesarios),
 \end{frame}
 
 
-\begin{frame}[label=sec-2-1-4]{Seguidor de eje horizontal N-S}
+\begin{frame}[label={sec:orgd072c7b}]{Seguidor de eje horizontal N-S}
+\begin{center}
 \includegraphics[width=.9\linewidth]{../figs/SeguidorEjeHorizontal.jpg}
+\end{center}
 \end{frame}
 
 
-\begin{frame}[label=sec-2-1-5]{Seguidor de doble eje}
+\begin{frame}[label={sec:org2486e4e}]{Seguidor de doble eje}
+\begin{center}
 \includegraphics[width=.9\linewidth]{../figs/SeguidorReocin.jpg}
+\end{center}
 \end{frame}
 
 
 \subsection{Ángulos}
-\label{sec-2-2}
+\label{sec:orgae38762}
 
-\begin{frame}[label=sec-2-2-1]{Sistema Estático}
+\begin{frame}[label={sec:orge966623}]{Sistema Estático}
 \begin{itemize}
 \item Vector de posición
 \end{itemize}
 \[\vec{\mu}_{\beta}=[\sin(\beta)\cos(\alpha)]\cdot\vec{\mu}_{h}+[\sin(\beta)\sin(\alpha)]\cdot\vec{\mu}_{\bot}+\cos(\beta)\cdot\vec{\mu}_{c}\]
 
+\begin{center}
 \includegraphics[width=.9\linewidth]{../figs/AngulosSistemaEstatico.pdf}
+\end{center}
 \end{frame}
 
-\begin{frame}[label=sec-2-2-2]{Sistema Estático}
+\begin{frame}[label={sec:orgbfd2750}]{Sistema Estático}
 \begin{itemize}
 \item Ángulo de Incidencia
 \end{itemize}
+
 \begin{align*}
 \cos(\theta_{s}) &= \mathrm{signo}(\phi)\cdot\bigl[\sin(\beta)\cos(\alpha)\cos\left(\delta\right)\cos\left(\omega\right)\sin\left(\phi\right)-\\
  &- \sin(\beta)\cos(\alpha)\cos\left(\phi\right)\sin\left(\delta\right)\bigr]+\\
@@ -474,75 +502,92 @@ necesarios),
  &+ \cos(\beta)\sin\left(\delta\right)\sin\left(\phi\right)
 \end{align*}
 
+
+\begin{center}
 \includegraphics[height=0.4\textheight]{../figs/AngulosSistemaEstatico.pdf}
+\end{center}
 \end{frame}
 
 
-\begin{frame}[label=sec-2-2-3]{Sistema Estático}
-Cuando $\alpha=0$
+\begin{frame}[label={sec:org254b0b1}]{Sistema Estático}
+Cuando \(\alpha=0\)
+
 \begin{align*}
 \cos(\theta_{s}) &= \cos\left(\delta\right)\cos\left(\omega\right)\cos\left(\beta-|\phi|\right)-\\ 
 &- \mathrm{signo}(\phi)\cdot\sin(\delta)\sin\left(\beta-|\phi|\right)
 \end{align*}
 
+
+\begin{center}
 \includegraphics[height=0.6\textheight]{../figs/AngulosSistemaEstatico.pdf}
+\end{center}
 \end{frame}
 
 
-\begin{frame}[label=sec-2-2-4]{Ángulo de Incidencia de Sistema Estático}
+\begin{frame}[label={sec:org26ff5b5}]{Ángulo de Incidencia de Sistema Estático}
 \begin{itemize}
-\item $40\degree N$
+\item \(40\degree N\)
 \end{itemize}
-
-\includegraphics[width=.9\linewidth]{../figs/cosThetaEst_40N.pdf}
+\begin{center}
+\includegraphics[height=0.8\textheight]{../figs/cosThetaEst_40N.pdf}
+\end{center}
 \end{frame}
 
 
 
-\begin{frame}[label=sec-2-2-5]{Eje Horizontal N-S, generador horizontal}
+\begin{frame}[label={sec:org4c3ca21}]{Eje Horizontal N-S, generador horizontal}
 \begin{itemize}
 \item Vector de posición
 \end{itemize}
 
 \[\vec{\mu}_{ns}=\sin(\psi_{ns})\cdot\vec{\mu}_{\bot}+\cos(\psi_{ns})\cdot\vec{\mu}_{c}\]
 
+\begin{center}
 \includegraphics[height=0.6\textheight]{../figs/AngulosSistemaHorizontalNS.pdf}
+\end{center}
 \end{frame}
 
 
 
-\begin{frame}[label=sec-2-2-6]{Eje Horizontal N-S, generador horizontal}
+\begin{frame}[label={sec:org5f38553}]{Eje Horizontal N-S, generador horizontal}
 \begin{itemize}
 \item Ángulo de Incidencia
 \end{itemize}
 
 \[\cos(\theta_{s})=\cos(\delta)\sqrt{\sin^{2}(\omega)+\left(\cos(\omega)\cos(\phi)+\tan(\delta)\sin(\phi)\right)^{2}}\]
 
+\begin{center}
 \includegraphics[height=0.6\textheight]{../figs/AngulosSistemaHorizontalNS.pdf}
+\end{center}
 \end{frame}
 
 
-\begin{frame}[label=sec-2-2-7]{Inclinación de Eje Horizontal N-S}
+\begin{frame}[label={sec:org6534ae9}]{Inclinación de Eje Horizontal N-S}
 \begin{itemize}
-\item $40\degree N$
+\item \(40\degree N\)
 \end{itemize}
-
-\includegraphics[width=.9\linewidth]{../figs/BetaHoriz_40N.pdf}
+\begin{center}
+\includegraphics[height=0.8\textheight]{../figs/BetaHoriz_40N.pdf}
+\end{center}
 \end{frame}
 
 
 
-\begin{frame}[label=sec-2-2-8]{Ángulo de Incidencia de Eje Horizontal N-S}
+\begin{frame}[label={sec:orga9657df}]{Ángulo de Incidencia de Eje Horizontal N-S}
 \begin{itemize}
-\item $40\degree N$
+\item \(40\degree N\)
 \end{itemize}
-
-\includegraphics[width=.9\linewidth]{../figs/cosThetaHoriz_40N.pdf}
+\begin{center}
+\includegraphics[height=0.8\textheight]{../figs/cosThetaHoriz_40N.pdf}
+\end{center}
 \end{frame}
 
 
-\begin{frame}[label=sec-2-2-9]{Acimutal}
+\begin{frame}[label={sec:org6126a59}]{Acimutal}
+\begin{center}
 \includegraphics[width=.9\linewidth]{../figs/Sombra2X.pdf}
+\end{center}
+
 
 \begin{align*}
   \beta &= cte.\\
@@ -553,25 +598,31 @@ Cuando $\alpha=0$
 
 
 
-\begin{frame}[label=sec-2-2-10]{Orientación de un seguidor acimutal}
-\begin{itemize}
-\item $40\degree N$
-\end{itemize}
 
-\includegraphics[width=.9\linewidth]{../figs/AlfaDoble_40N.pdf}
+\begin{frame}[label={sec:org2e2d36d}]{Orientación de un seguidor acimutal}
+\begin{itemize}
+\item \(40\degree N\)
+\end{itemize}
+\begin{center}
+\includegraphics[height=0.8\textheight]{../figs/AlfaDoble_40N.pdf}
+\end{center}
 \end{frame}
 
-\begin{frame}[label=sec-2-2-11]{Ángulo de Incidencia en Acimutal}
+\begin{frame}[label={sec:orgfe2db8b}]{Ángulo de Incidencia en Acimutal}
 \begin{itemize}
-\item $40\degree N$
+\item \(40\degree N\)
 \end{itemize}
-
-\includegraphics[width=.9\linewidth]{../figs/cosThetaAzimutal_40N.pdf}
+\begin{center}
+\includegraphics[height=0.8\textheight]{../figs/cosThetaAzimutal_40N.pdf}
+\end{center}
 \end{frame}
 
 
-\begin{frame}[label=sec-2-2-12]{Doble Eje}
+\begin{frame}[label={sec:org077bbb5}]{Doble Eje}
+\begin{center}
 \includegraphics[width=.9\linewidth]{../figs/Sombra2X.pdf}
+\end{center}
+
 
 \begin{align*}
   \beta &= \theta_{z}\\
@@ -581,17 +632,19 @@ Cuando $\alpha=0$
 \end{frame}
 
 
-\begin{frame}[label=sec-2-2-13]{Inclinación de un seguidor de Doble Eje}
-\begin{itemize}
-\item $40\degree N$
-\end{itemize}
 
-\includegraphics[width=.9\linewidth]{../figs/BetaDoble_40N.pdf}
+\begin{frame}[label={sec:org10e1ad0}]{Inclinación de un seguidor de Doble Eje}
+\begin{itemize}
+\item \(40\degree N\)
+\end{itemize}
+\begin{center}
+\includegraphics[height=0.8\textheight]{../figs/BetaDoble_40N.pdf}
+\end{center}
 \end{frame}
 
 
 
-\begin{frame}[label=sec-2-2-14]{Ejercicio: cálculo de ángulo de incidencia}
+\begin{frame}[label={sec:orgedd361f}]{Ejercicio: cálculo de ángulo de incidencia}
 \begin{description}
 \item[{Para:}] \begin{itemize}
 \item Un sistema estático orientado al Sur y con inclinación de 30;
@@ -612,5 +665,4 @@ Cuando $\alpha=0$
 \end{itemize}
 \end{description}
 \end{frame}
-% Emacs 24.4.1 (Org mode 8.2.7c)
 \end{document}
